--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "Blog",
-  "version": "0.0.0",
+  "name": "door-control-system",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "nodemon ./bin/www --exec babel-node"
   },
   "dependencies": {
     "body-parser": "~1.15.1",
@@ -11,21 +11,27 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "express": "~4.13.4",
-    "grunt": "^1.0.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.7.0",
-    "nodemailer": "^2.5.0",
-    "serve-favicon": "~2.3.0",
     "express-session": "^1.15.2",
     "generic-pool": "^2.4.2",
+    "grunt": "^1.0.1",
     "md5": "^2.2.1",
     "mongodb": "^2.2.26",
     "mongoose": "^4.9.6",
+    "morgan": "~1.7.0",
+    "nodemailer": "^2.5.0",
     "nunjucks": "^2.4.2",
     "pug": "~2.0.0-beta11",
     "redis": "^2.6.2",
     "request": "^2.74.0",
-    "uuid": "^2.0.2"
+    "serve-favicon": "~2.3.0",
+    "shortid": "^2.2.8",
+    "uuid": "^2.0.2",
+    "froala-editor": "^2.3.4",
+    "google-closure-library": "^20160713.0.0",
+    "ip": "^1.1.3",
+    "markdown": "^0.5.0",
+    "simditor": "^2.3.6",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
